minor fixes, alignments and index changed to include alts and href

--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,13 @@ nav a:hover, nav a:focus {
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
 .skip a{
-  position: relative;
+  position: absolute;
   top: -40px;
 }
 
 /* Step 2b: Write selector/rule property to position the skip class element when it is in focus*/
 .skip a:focus {
-  position: relative;
+  position: absolute;
   top: 20px;
 }
 
